--- a/Resources/data.ipynb
+++ b/Resources/data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "2fb43bce",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "7b771063",
    "metadata": {},
    "outputs": [
@@ -135,7 +135,7 @@
        "4  147.90     32.17        2.95  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,8 +147,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "c440d4f7",
+   "execution_count": 21,
+   "id": "713c2cf1",
    "metadata": {},
    "outputs": [
     {
@@ -244,27 +244,114 @@
        "      <td>32.17</td>\n",
        "      <td>2.95</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>542</th>\n",
+       "      <td>scalea</td>\n",
+       "      <td>36</td>\n",
+       "      <td>IT</td>\n",
+       "      <td>1528905631</td>\n",
+       "      <td>100</td>\n",
+       "      <td>39.82</td>\n",
+       "      <td>15.79</td>\n",
+       "      <td>70.06</td>\n",
+       "      <td>5.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>543</th>\n",
+       "      <td>san andres</td>\n",
+       "      <td>68</td>\n",
+       "      <td>PH</td>\n",
+       "      <td>1528905632</td>\n",
+       "      <td>100</td>\n",
+       "      <td>13.32</td>\n",
+       "      <td>122.68</td>\n",
+       "      <td>83.47</td>\n",
+       "      <td>22.64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>544</th>\n",
+       "      <td>muisne</td>\n",
+       "      <td>92</td>\n",
+       "      <td>EC</td>\n",
+       "      <td>1528905633</td>\n",
+       "      <td>84</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>-80.02</td>\n",
+       "      <td>76.90</td>\n",
+       "      <td>4.63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>545</th>\n",
+       "      <td>ati</td>\n",
+       "      <td>20</td>\n",
+       "      <td>TD</td>\n",
+       "      <td>1528905633</td>\n",
+       "      <td>25</td>\n",
+       "      <td>13.21</td>\n",
+       "      <td>18.34</td>\n",
+       "      <td>104.53</td>\n",
+       "      <td>4.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>546</th>\n",
+       "      <td>san luis</td>\n",
+       "      <td>0</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1528905472</td>\n",
+       "      <td>53</td>\n",
+       "      <td>-33.30</td>\n",
+       "      <td>-66.34</td>\n",
+       "      <td>42.43</td>\n",
+       "      <td>2.62</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>547 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "           City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
-       "0  jacareacanga           0      BR  1528902000        62  -6.22  -57.76   \n",
-       "1    kaitangata         100      NZ  1528905304        94 -46.28  169.85   \n",
-       "2      goulburn          20      AU  1528905078        91 -34.75  149.72   \n",
-       "3          lata          76      IN  1528905305        89  30.78   78.62   \n",
-       "4    chokurdakh           0      RU  1528905306        88  70.62  147.90   \n",
+       "             City  Cloudiness Country        Date  Humidity    Lat     Lng  \\\n",
+       "0    jacareacanga           0      BR  1528902000        62  -6.22  -57.76   \n",
+       "1      kaitangata         100      NZ  1528905304        94 -46.28  169.85   \n",
+       "2        goulburn          20      AU  1528905078        91 -34.75  149.72   \n",
+       "3            lata          76      IN  1528905305        89  30.78   78.62   \n",
+       "4      chokurdakh           0      RU  1528905306        88  70.62  147.90   \n",
+       "..            ...         ...     ...         ...       ...    ...     ...   \n",
+       "542        scalea          36      IT  1528905631       100  39.82   15.79   \n",
+       "543    san andres          68      PH  1528905632       100  13.32  122.68   \n",
+       "544        muisne          92      EC  1528905633        84   0.61  -80.02   \n",
+       "545           ati          20      TD  1528905633        25  13.21   18.34   \n",
+       "546      san luis           0      AR  1528905472        53 -33.30  -66.34   \n",
        "\n",
-       "   Max Temp  Wind Speed  \n",
-       "0     89.60        6.93  \n",
-       "1     42.61        5.64  \n",
-       "2     44.32       10.11  \n",
-       "3     59.89        0.94  \n",
-       "4     32.17        2.95  "
+       "     Max Temp  Wind Speed  \n",
+       "0       89.60        6.93  \n",
+       "1       42.61        5.64  \n",
+       "2       44.32       10.11  \n",
+       "3       59.89        0.94  \n",
+       "4       32.17        2.95  \n",
+       "..        ...         ...  \n",
+       "542     70.06        5.30  \n",
+       "543     83.47       22.64  \n",
+       "544     76.90        4.63  \n",
+       "545    104.53        4.97  \n",
+       "546     42.43        2.62  \n",
+       "\n",
+       "[547 rows x 9 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +359,7 @@
    "source": [
     "data.set_index('City_ID', inplace=True)\n",
     "data.reset_index(drop=True, inplace=True)\n",
-    "data.head()"
+    "data"
    ]
   },
   {
